# nimble

./: .dockerignore  .gitignore  Dockerfile  Makefile  compose.dev.yml  docker-compose.yml  package.json
.github/workflows/: build-docker-image.yml
app/: package.json
app/public/: index.html
app/src/: api.ts  index.tsx  utils.ts
app/src/components/: App.tsx  Container.tsx  FileEntriesContainer.tsx  FileEntry.tsx  FileEntryInfo.tsx  Navbar.tsx  SearchDialog.tsx
backend/: Cargo.toml  Dockerfile.dev
backend/crates/graphql/: Cargo.toml
backend/crates/graphql/src/: lib.rs
backend/crates/server/: Cargo.toml
backend/crates/server/src/: auth.rs  main.rs
backend/crates/server/src/utilities/: axum.rs  cached.rs  mod.rs
backend/crates/tools/: Cargo.toml
frontend/: Dockerfile.dev  package.json
nginx/: dev.conf
src/: api.ts  env.ts  index.ts  tracing.ts
