[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
async-graphql = "7.0"
async-graphql-axum = "7.0"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7" }
openidconnect = { version = "3.4" }
reqwest = { version = "0.11" }
anyhow = { version = "1.0" }
oauth2 = { version = "4.4" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
