[package]
name = "nimble-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql-axum.workspace = true
async-graphql.workspace = true
axum.workspace = true
tokio.workspace = true
openidconnect.workspace = true
anyhow.workspace = true
reqwest.workspace = true
oauth2.workspace = true
serde.workspace = true
serde_json.workspace = true

nimble-graphql = { path = "../graphql" }